manifests/02-calico-policies/tier-testpod/testpod-netshoot.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: testpod

---
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: testpod
  labels:
    app: netshoot
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot:latest
    command: ["/bin/bash", "-c", "sleep infinity"]
    securityContext:
      runAsUser: 1000
      runAsGroup: 3000
      capabilities:
        add: ["NET_ADMIN"]
  restartPolicy: Always
