manifests/02-calico-policies/tier-testpod/testpod-allow-all.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-testpod-all
  namespace: testpod
  annotations:
    projectcalico.org/tier: testpod   # 👈 Dedicated tier for clarity
spec:
  selector: all()
  ingress:
    - action: Allow
      source: {}
      destination: {}
  egress:
    - action: Allow
      source: {}
      destination: {}
